[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxf-pipeline"
version = "0.1.0"
description = "Siligen DXF pipeline compatibility shell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ezdxf>=1.3.0",
  "protobuf>=4.25.0",
  "shapely>=2.0.0",
  "geomdl>=5.3.1",
  "pyclipper>=1.3.0",
  "ruckig>=0.12.0",
]

[project.scripts]
dxf-to-pb = "dxf_pipeline.cli.dxf_to_pb:main"
path-to-trajectory = "dxf_pipeline.cli.path_to_trajectory:main"
export-simulation-input = "dxf_pipeline.cli.export_simulation_input:main"
generate-dxf-preview = "dxf_pipeline.cli.generate_preview:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
