[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmi-client"
version = "0.1.0"
description = "Siligen canonical HMI app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt5>=5.15.0",
  "PyQtWebEngine>=5.15.0",
]

[project.scripts]
hmi-client = "hmi_client.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
